--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ header {
 }
 
 header.scrolled {
-    background-color: rgba(0, 0, 0, 0.6); /* Sayfa arka planına uyum sağlar */
-    backdrop-filter: blur(10px); /* Hafif cam efekti */
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
 }
 
 header .navbar {
@@ -225,7 +225,7 @@ header .navbar {
 }
 
 .about-section .about-details {
-    max-width: 50%;
+    max-width: 80%;
 }
 
 .about-section .about-details .text {
@@ -233,7 +233,7 @@ header .navbar {
     line-height: 30px;
     margin: 50px 0 30px;
     text-align: center;
-    font-size: var(--font-size-m);
+    font-size: var(--font-size-s);
 }
 
 .about-section .social-link-list {
@@ -322,7 +322,7 @@ header .navbar {
     display: flex;
     gap: 48px;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .contact-section .contact-info-list .contact-info {
@@ -335,6 +335,11 @@ header .navbar {
 /* .contact-section .contact-info-list .contact-info i{
     font-size: var(--font-size-m);
 } */
+
+.contact-section .contact-image-wrapper {
+    max-width: 500px;
+    margin-right: 30px;
+}
 
 .contact-section .contact-form .form-input {
     width: 100%;
@@ -457,7 +462,8 @@ header .navbar {
         left: -300px;
         top: 0;
         width: 300px;
-        height: 100%;
+        height: 100vh;
+        z-index: 1001;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -486,7 +492,8 @@ header .navbar {
     }
 
     .hero-section .hero-details :is(.description),
-    .about-section .about-details .contact-section .contact-form {
+    .about-section .about-details,
+    .contact-section .contact-form {
         max-width: 100%;
     }
 
@@ -513,8 +520,14 @@ header .navbar {
 
     .contact-section .section-content {
         align-items: center;
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
+
+    .contact-section .contact-image-wrapper {
+        max-width: 270px;
+        margin-right: 0;
+    }
+
 }
 
 
