--- a/privacyPolicyStyle.css
+++ b/privacyPolicyStyle.css
@@ -243,7 +243,7 @@ li {
 
 .footer-section .social-link-list .social-link:hover,
 .footer-section .policy-text .policy-link:hover {
-    color: var(--dark-color);
+    color: var(--light-gray-color);
 }
 
 /* Büyük cihazlar (dizüstü ve üzeri, 993px ve üzeri) */
